server module done

--- a/QtScrcpy/dialog.ui
+++ b/QtScrcpy/dialog.ui
@@ -16,14 +16,27 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>110</y>
-     <width>80</width>
+     <x>110</x>
+     <y>90</y>
+     <width>191</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>test</string>
+    <string>start server</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>150</y>
+     <width>191</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string> stop server</string>
    </property>
   </widget>
  </widget>
